Wolof: Various cleanups
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106831 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/wo/firefoxflicks.lang
+++ b/wo/firefoxflicks.lang
@@ -1,5 +1,5 @@
 ;Mozilla presents a global video contest to tell our story.
-Mozilla dafay def Kookuur wideyoo ci nettali jaarjaaram.
+Mozilla dafay def konkuur wideyoo ci nettali jaarjaaram.
 
 
 ;« Return Home
