--- a/wo/home.lang
+++ b/wo/home.lang
@@ -31,7 +31,7 @@ Li ngir seddoo.
 
 
 ;Create <br/> dedicated <br/> tabs for it
-Sos <br/> jgle<br/>koñ yi ngir
+Sos <br/> jagale <br/> koñ yi ngir
 
 
 ;Customize <br/> to make <br/> it faster
@@ -39,11 +39,11 @@ Solal <br/> ngir mu <br/> gëna gaaw
 
 
 ;Get add-ons <br/> and make <br/> it easier
-Jêlal ay mottali <br/> li ngay def  <br/> gëna yomb
+Jëlal ay mottali <br/> li ngay def <br/> gëna yomb
 
 
 ;Works harder so <br /> you don't have to.
-Liggéey bu metti <br />Doo too ko def.
+Liggéey bu metti <br /> doo too ko def.
 
 
 ;Increased <br/> speed
@@ -51,7 +51,7 @@ Yokk <br/> gaawaay
 
 
 ;Easy to <br/> access tabs
-Yomb na  <br/> agg ci koñ yi
+Yomb na <br/> agg ci koñ yi
 
 
 ;Productivity <br/> add-ons
@@ -83,4 +83,4 @@ Jëm Kanam <br/> garafik
 
 
 ;Improved <br/> reliability
-yokk <br/> wóoraay
+Yokk <br/> wóoraay
