--- a/wo/main.lang
+++ b/wo/main.lang
@@ -3,7 +3,7 @@ Njoow mi
 
 
 ;Press area
-Press Area
+Dendu xibaar
 
 
 ;About
@@ -43,7 +43,7 @@ Labs {ok}
 
 
 ;skip to Navigation
-jàll ci njoow mi
+jàll ci Njoow mi
 
 
 ;switch language
@@ -83,7 +83,7 @@ Jokkoo ak dal bi
 
 
 ;Other languages:
-Yeneen lammiñ
+Yeneen lammiñ:
 
 
 ;%Y-%m-%d
@@ -91,7 +91,7 @@ Yeneen lammiñ
 
 
 ;All rights reserved.
-Teg loxo sañ sañ yepp
+Teg loxo sañ sañ yepp.
 
 
 ;Legal Notices
@@ -143,7 +143,7 @@ Tëj
 
 
 ;(in English)
-(ci angale)
+(ci Angale)
 
 
 ;Download Now - Free
@@ -159,7 +159,7 @@ Da nga wara <a href="http://get.adobe.com/flashplayer/">yeesal Adobe Flash Playe
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-Firefox yees na, wante sa sumbu bii Flash Player mën na indi ay jafe jafe ci wallu kaarange ak dëgaraay. Digal nañu la <a href="http://get.adobe.com/flashplayer/">nga samp yeesal yi </a> ci lumu ëna gaawe.
+Firefox yees na, wante sa sumbu bii Flash Player mën na indi ay jafe jafe ci wallu kaarange ak dëgaraay.   Digal nañu la <a href="http://get.adobe.com/flashplayer/">nga samp yeesal yi </a> ci lumu ëna gaawe.
 
 
 ;Features
@@ -179,7 +179,7 @@ Defar ngir mobil
 
 
 ;Other Supported Platforms
-yeneen porogaraam yu mëna dem
+Yeneen porogaraam yu mëna dem
 
 
 ;Other Platforms &amp; Languages
@@ -219,7 +219,7 @@ Wideyoo
 
 
 ;Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
-Ginnaaw <a href="%s">ñu bind ko</a>, këmbu dal bi dafa and ak lisãns <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a>walla beneen sumb.
+Ginnaaw <a href="%s">ñu bind ko</a>, këmbu dal bi dafa and ak lisãns <br /><a href="%s"> Creative Commons Attribution Share-Alike License v3.0</a>walla beneen sumb.
 
 
 ;Report Trademark Abuse
@@ -239,7 +239,7 @@ Solal ko ak modil yi
 
 
 ;Sync Your Desktop & Mobile
-jokkanlanteel sa ordintëëru biro ak sa telefon
+Jokkanlanteel sa ordintëëru biro ak sa telefon
 
 
 ;Learn More
@@ -311,7 +311,7 @@ Jéemleen Firefox ak gis gis bu sedd.
 
 
 ;Experience tomorrow's Web today.
-Suba jëfgisu Web bu tay
+Suba jëfgisu Web bu tay.
 
 
 ;Check out the new look and feel of Firefox.
@@ -383,7 +383,7 @@ Teknolosi yi mujj
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-Yaa ngiy jëfandikoo ak sumbu  Firefox bu yagg.  Jëlal sa yeesal ngir am kaarange! <br/> <a href="%s">Yebal yeesal bi nga dul fay</a> ci simili yu ndaw ngir am mbir yu bees yi, gaawaay ak kaarange.
+Yaa ngiy jëfandikoo ak sumbu Firefox bu yagg. Jëlal sa yeesal ngir am kaarange! <br/> <a href="%s">Yebal yeesal bi nga dul fay</a> ci simili yu ndaw ngir am mbir yu bees yi, gaawaay ak kaarange.
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
@@ -391,7 +391,7 @@ Soxla nga yeesal! Nga am kaarange ci simili. <br/> Tambalil jëriñoo sa Firefox
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-Yaa ngiy jëfandikoo ak sumbu Firefox bu yagg.. Jëlal <a href="%s">sa yeesal</a>ngir am kaarange! <br/> Seetal bees bees yi , kaarange ak firefox bi gëna gaaw. Yebal yeesal yi kenn jaayul ci lu mëtul simili.
+Yaa ngiy jëfandikoo ak sumbu Firefox bu yagg. Jëlal<a href="%s">sa yeesal</a>ngir am kaarange! <br/> Seetal bees bees yi, kaarange ak firefox bi gëna gaaw. Yebal yeesal yi kenn jaayul ci lu mëtul simili.
 
 
 ;Upgrade now
