--- a/wo/mozorg/contribute-form.lang
+++ b/wo/mozorg/contribute-form.lang
@@ -1,5 +1,5 @@
 ;Please tell us more about your interests.
-Baal ma nga wax ma li nga bëgg
+Baal ma nga wax ma li nga bëgg.
 
 
 ;Want to help?
@@ -11,7 +11,7 @@ Tannal yi sa bëgg bëgg ne.
 
 
 ;Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-Kenn ci waa Mozilla dina dellusi leegi ak ay xibaar ci ni ngay bokke. Li ngay toog di neg xoolal fii ci suuf yi mëna am ci mbirum benewola
+Kenn ci waa Mozilla dina dellusi leegi ak ay xibaar ci ni ngay bokke. Li ngay toog di neg xoolal fii ci suuf yi mëna am ci mbirum benewola.
 
 
 ;Hi, I’m interested in…
