--- a/wo/mozorg/contribute.lang
+++ b/wo/mozorg/contribute.lang
@@ -59,7 +59,7 @@ Maa ngi lay gëram ci jokkoo bi.
 
 
 ;Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-Kenn ci waa Mozilla dina dellusi leegi ak ay xibaar ci ni ngay dugge. Li ngay toog di xaar mën nga seet  fii ci suuf ci mbiri benewolaa
+Kenn ci waa Mozilla dina dellusi leegi ak ay xibaar ci ni ngay dugge. Li ngay toog di xaar mën nga seet fii ci suuf ci mbiri benewolaa.
 
 
 ;Find an opportunity
@@ -99,7 +99,7 @@ Testu baaxaay ci yoon yi gëna yomb ci door Mozilla ak miin suulaale yi ak jumtu
 
 
 ;Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Dimmalileen ñu ci rëbb<a href="http://quality.mozilla.org/teams/desktop-firefox/"><a href="http://quality.mozilla.org/teams/desktop-firefox/">bug yi</a></a>ci firefox<a href="http://quality.mozilla.org/teams/web-qa/">~~V~~HEAD=NNS équipes / web-qa / "> dalu test  Mozilla </ a> walla jàng nan la ñuy testeehref="http://baaxaay.mozilla.org/"> <a ak yeneen </ a>.
+Dimmalileen ñu <a href="http://quality.mozilla.org/teams/desktop-firefox/">daq bug yi</a>ci firefox, <a href="http://quality.mozilla.org/teams/web-qa/">dalu test  Mozilla</a> walla jàng bu baax <a href="http://quality.mozilla.org/">ak yeneen</a>.
 
 
 ;Coding
@@ -107,11 +107,11 @@ Suulaale
 
 
 ;<a href="https://developer.mozilla.org/en/Introduction">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others.
-<a href="https://defarkat.mozilla.org/en/Ubbite">Defarkat yi en nañu dimmali</a> Mozilla ci yokk ay bees bees, loolu di def sunu teknolosi mu gëna tuuti te gëna gaaw tye di yuombalal liggeey bi ñeneen.
+<a href="https://developer.mozilla.org/en/Introduction">Defarkat yi en nañu dimmali</a> Mozilla ci yokk ay bees bees, loolu di def sunu teknolosi mu gëna tuuti te gëna gaaw tye di yuombalal liggeey bi ñeneen.
 
 
 ;You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
-Mën nga jot defarkat yu bari ci  <a href="http://irc.mozilla.org">IRC</a> ngir tawaw walla laaj. Suñu dal yi ñooy <a href="http://blog.mozilla.com/webdev/get-involved/">ubbeeku ci web ninjas</a> ak piraat itam.
+Mën nga jot defarkat yu bari ci <a href="http://irc.mozilla.org">IRC</a> ngir tawaw walla laaj. Suñu dal yi ñooy <a href="http://blog.mozilla.com/webdev/get-involved/">ubbeeku ci web ninjas</a> ak piraat itam.
 
 
 ;Spread the Word
@@ -123,7 +123,7 @@ Dimmalleen ñu ngir wax nan la Firfox Mozilla ak yeneen porose Mozilla bokk ci d
 
 
 ;Find out about <a href="/contribute/areas.html">more areas of interest…</a>
-Wut leena xam<a href="/contribute/areas.html"> yeneen dendu intere...</a>
+Wut leena xam<a href="/contribute/areas.html">yeneen dendu intere...</a>
 
 
 ;map
@@ -131,7 +131,7 @@ carte
 
 
 ;US and Canada
-Us ak Kanada
+US ak Kanada
 
 
 ;Europe
