--- a/wo/mozspaces.lang
+++ b/wo/mozspaces.lang
@@ -39,7 +39,7 @@ Paris {ok}
 
 
 ;The Paris space will be moving to a bigger location. Site visits are happening in December 2011 and we're targeting to open the new space in the second quarter of 2012.
-Dendu Paris dafa g¨na rëy. Dal yu bari  gane nañu leen ci ci desambar2011, ñaareelu dend bi ñi ngi ko bëgg ubbi xaaju 2012.
+Dendu Paris dafa gëna rëy. Dal yu bari gane nañu leen ci ci desambar 2011, ñaareelu dend bi ñi ngi ko bëgg ubbi xaaju 2012.
 
 
 ;San Francisco
@@ -63,7 +63,7 @@ Vancouver {ok}
 
 
 ;We are in the process of revamping our Vancouver space. We’re staying in the same building, just expanding to incorporate a new community area that will launch early in 2012. Hope to see you there!
-Ñi ngi ci yoonu defaraat sunu dendu Vancouver. Ci building bi ñu newoon fa la ñu ne ba leegi, wante dañuy yaatal ngir xajal ñeneen ci 2012. Fook nañu ni di nañu leen fa gis.
+Ñi ngi ci yoonu defaraat sunu dendu Vancouver. Ci building bi ñu newoon fa la ñu ne ba leegi, wante dañuy yaatal ngir xajal ñeneen ci 2012. Fook nañu ni di nañu leen fa gis!
 
 
 ;London
