--- a/wo/newsletter.lang
+++ b/wo/newsletter.lang
@@ -31,15 +31,15 @@ Nangu naa <a href="%s">Politigu biir</a>
 
 
 ;Sign me up!
-Bind ma
+Bind ma!
 
 
 ;We will only send you Mozilla-related information.
-Xibaar yi ñu lay yonnee ci Mozilla rekk la jëm
+Xibaar yi ñu lay yonnee ci Mozilla rekk la jëm.
 
 
 ;Thanks for Subscribing!
-Jërajëf ci sa takkoo
+Jërajëf ci sa takkoo!
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
@@ -47,7 +47,7 @@ Jërajëf ci sa takkoo
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Takkool ak yeesal yi weer wu ne, te di am ay xibaari Mozilla, dem ba ci pexe yi lay may nga gëna mën jariñoo sa joowkat Firefox. Mooy yoon wi gën ci jokkoo.
+Takkool ak yeesal yi weer wu ne, te di am ay xibaari Mozilla, dem ba ci pexe yi lay may nga gëna mën jariñoo sa joowkat Firefox. Mooy yoon wi gën ci jokkoo!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
@@ -59,7 +59,7 @@ Jàngal lepp ci sunu<span>xibaarukaay</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Sa takkoo ak xibaarukaay dëggal nañu ko
+Sa takkoo ak xibaarukaay dëggal nañu ko.
 
 
 ;Format
