--- a/wo/press.lang
+++ b/wo/press.lang
@@ -15,7 +15,7 @@ Jokkoo<span>ak ñun</span>
 
 
 ;Subscribe to RSS feed »
-Takkoo ak baawaan RSS
+Takkoo ak baawaan RSS »
 
 
 ;For interview requests or any other media inquiries, please contact:
