--- a/wo/snippets.lang
+++ b/wo/snippets.lang
@@ -3,19 +3,19 @@ Jëlal Firefox fépp foo mëna dem! Firefox bu Android bu mujj pare na. <a href=
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
-Leegi am nga sumb bi mujj,<a href="%s">jàngal ci mbiri </a></a>yu baax </a> yi nga mëna def ak sa Firefox.
+Leegi am nga sumb bi mujj,<a href="%s">jàngal ci mbiri</a> yu baax yi nga mëna def ak sa Firefox.
 
 
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
-Amuloo sumbu Firefox bi mujj.<a href="%s">yeesalal tay</a> jotb li gën ci Web bi!
+Amuloo sumbu Firefox bi mujj. <a href="%s">yeesalal tay</a> jotb li gën ci Web bi!
 
 
 ;Get the latest Firefox features first in <a href="%s">Aurora</a>.
-Amal bees bees yu mujj yu Firefox ci<a href="%s">Aurora</a>
+Amal bees bees yu mujj yu Firefox ci<a href="%s">Aurora</a>.
 
 
 ;Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
-Amal benn gis gis ci ëlëgu Firefox.<a href="%s">Yebal Firefox Aurora</a> te nga teste bees bees yi mujj.
+Amal benn gis gis ci ëlëgu Firefox. <a href="%s">Yebal Firefox Aurora</a> te nga teste bees bees yi mujj.
 
 
 ;Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
@@ -31,19 +31,19 @@ Firefox wutul xaalis te dafa libar ci sos ci sa tur te doo taq ci dara. <a href=
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Gaaw, am kaarange, Firefox moon rekk mooy joowkat bi lay tek ci kanam. <a href="%s"> Gënal jàng</a> liñu wuute ci defarin.
+Gaaw, am kaarange, Firefox moon rekk mooy joowkat bi lay tek ci kanam. <a href="%s">Gënal jàng</a> liñu wuute ci defarin.
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Yebal Firefox ci sa Android tablet</a>te am doole web bi say loxo. Jël ko leegi.
+<a href="%s">Yebal Firefox ci sa Android tabalet</a>te am doole web bi say loxo. Jël ko leegi.
 
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-Na say plugins yees te toog ci rëdd ak <a href="%s">Plugin Check</a>
+Na say plugins yees te toog ci rëdd ak <a href="%s">Plugin Check</a>.
 
 
 ;Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
-Bayil sa  Firefox ci melin. solal ko ci li mujj ci<a href="%s">Personas</a>.
+Bayil sa Firefox ci melin. Solal ko ci li mujj ci <a href="%s">Personas</a>.
 
 
 ;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
@@ -51,15 +51,15 @@ Koñ yi bari nañu? Jëlaatal sa joowkat ci sëmbaxloo bi ak<a href="%s">Panoram
 
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-Amul ñaari jëfandikookat niroo. <a href="%s">yokkal butoŋ bu la neex ci sa joowkat</a>walla nga neenal yi nga jëfandikoowul. Cuq ci butoŋu ndeyjoor ci kaw kër gi te fal solal.
+Amul ñaari jëfandikookat yu niroo. <a href="%s">yokkal butoŋ bu la neex ci sa joowkat</a> walla nga neenal yi nga jëfandikoowul. Cuq ci butoŋu ndeyjoor ci kaw kër gi te fal solal.
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Solalal sa Firefox ak Personas. Jaar ci kaw ngir jéem, cuq ngi def. Walla nga gane <a href="%s">galëri</a>alfajune yoon!
+Solalal sa Firefox ak Personas. Jaar ci kaw ngir jéem, cuq ci def. Walla nga gane <a href="%s">galëri</a>alfajune yoon!
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-Xool bu jëkk cibeesbees yi, laata ngay dem ci Beta.<a href="%s">yebal Firefox Aurora.</a>
+Xool bu jëkk ci bees bees yi, laata ngay dem ci Beta. <a href="%s">yebal Firefox Aurora.</a>
 
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
@@ -71,7 +71,7 @@ Teel ko jot te dimmali ñu defar ëlëgu Firefox. <a href="%s">Yebal Firefox Aur
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-Firefox bu Android defar nañu ko ci ngir joow ci tabalet yi.<a href="%s"> Jëllal doole Web bi ci say baaraam.
+Firefox bu Android defar nañu ko ci ngir joow ci tabalet yi. <a href="%s"> Jëllal doole Web bi ci say baaraam</a>.
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
@@ -103,7 +103,7 @@ Bëgg nga seddoo say xalaat? <a href="%">Seetal nan</a> te dimmaliñu ñu defar 
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Yéen ñiy jëfanikoo Firefox Beta: Bu leen fatte <a href="%">joxe seen xalaat</a>ngeen dimmaliñu ñu def regalaas yi mujj.
+Yéen ñiy jëfanikoo Firefox Beta: Bu leen fatte <a href="%">joxe seen xalaat</a> ngeen dimmaliñu ñu def regalaas yi mujj.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
@@ -115,7 +115,7 @@ Wool sa xarit yi ñu gis bees bees yi ci Firefox. <a href="%">Bokkal</a> te sedd
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Jëfandikoo Firefox ci ordinatëër yu bari? Leegi mën nga jokkalante say modil yu bari.<a href="%">Seetal nan ngay suqali Sync.</a>
+Jëfandikoo Firefox ci ordinatëër yu bari? Leegi mën nga jokkalante say modil yu bari. <a href="%">Seetal nan ngay suqali Sync.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
