--- a/wo/upgradedialog.lang
+++ b/wo/upgradedialog.lang
@@ -39,7 +39,7 @@ amal jëfgis yu gëna gaaw
 
 
 ;enjoy greater customization
-Përëfitool ci solal bu gëna mag
+përëfitool ci solal bu gëna mag
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
@@ -75,7 +75,7 @@ Firefox nangootul sa sumbu doxalin te dina yomb song ci rëdd.
 
 
 ;Upgrading your <a %s>operating system</a>
-nga yeesal <a %s>sa doxalin wi</a>
+Nga yeesal <a %s>sa doxalin wi</a>
 
 
 ;Downloading a compatible browser
