--- a/wo/upgradepromos.lang
+++ b/wo/upgradepromos.lang
@@ -7,7 +7,7 @@ Ban gaawaay<span>la sa Firefox am?</span>
 
 
 ;New Firefox is up to 7 times faster. (That’s a lot!) Check the speedometer to see if yours can keep up.
-Firefox gën na gaaw 7 yoon. (Bare na de!) Xoolal sa nattukkaayu gaawaay ndax sa bos mën na dem..
+Firefox gën na gaaw 7 yoon. (Bare na de!) Xoolal sa nattukkaayu gaawaay ndax sa bos mën na dem.
 
 
 ;Old Firefox = <em>Sadface</em>
@@ -39,7 +39,7 @@ Hey, dafa melni jëfandikoowoo Firefox ne joowkat. Lu tax doo jël Firefox ngir 
 
 
 ;New Firefox is faster, free (as always), crashes less and protects your privacy more.
-Firfox bu bees bee gëna gaaw, kenn du ko jaay, du ngiroote dafay gëna aar say mbir.
+Firfox bu bees bee gëna gaaw, kenn du ko jaay(saa su ne), du ngiroote dafay gëna aar say mbir.
 
 
 ;<a %s>Upgrading</a> takes less than a minute and you won’t lose your history or bookmarks. Hooray!
@@ -51,7 +51,7 @@ Ngiroo yi neew nañu <span>Ngëneel yi gëna bari</span>
 
 
 ;Upgrade now and see how much happier browsing can be with the <b>newest and fastest Firefox</b>.
-Yeesalal leegi te nga gis ni joow gëne baaxe ak<b> Firefox bu bees bi te gaaw</b>.
+Yeesalal leegi te nga gis ni joow gëne baaxe ak <b> Firefox bu bees bi te gaaw</b>.
 
 
 ;Upgrade Firefox
