--- a/wo/videos/video_box.lang
+++ b/wo/videos/video_box.lang
@@ -3,7 +3,7 @@ Say jëfekaay ci say aparey yépp
 
 
 ;box is an enterprise content management solution.
-boyet pexe saytu këmbu antarpëriis
+boyet pexe saytu këmbu antarpëriis.
 
 
 ;Basically the simplest way for business users
@@ -27,11 +27,11 @@ yu melni kaarange, seddoo, ndigal
 
 
 ;and overall admin management over what content is being shared by whom and where.
-ak saytin wi ci këmb gi ñu seddoo ko ak ku ne ak fu ne
+ak saytin wi ci këmb gi ñu seddoo ko ak ku ne ak fu ne.
 
 
 ;These are things that we have, by design, baked into our product
-Ay mbir la , ci ni ñu leen tëgge, togg 
+Ay mbir la , ci ni ñu leen tëgge, togg
 
 
 ;and that is really something that sets us apart in the marketplace.
@@ -43,19 +43,19 @@ Te dafa and ak yomb ci jëfandikoo
 
 
 ;that you would expect out of a consumer solution.
-bi ñuy neg ci looy jëfandikoo
+bi ñuy neg ci looy jëfandikoo.
 
 
 ;At its very core, our product is a web product, so porting it into HTML5
-Laltu bi , maltu web la, mi ngi ci biir HYML5
+Laltu bi , maltu web la, mi ngi ci biir HTML5
 
 
 ;was just adding on a couple of extra things to it.
-mi yokk ay mbir yu bari
+mi yokk ay mbir yu bari.
 
 
 ;Since we have adopted HTML5 technology both for our web product and for our default mobile page,
-bi ñu jëlee HTML5 ba leegi ngir suñu mbiri web ak suñu xëtu mobil ñakk ndigal
+Bi ñu jëlee HTML5 ba leegi ngir suñu mbiri web ak suñu xëtu mobil ñakk ndigal
 
 
 ;so that our web page can work by default on any device,
@@ -75,11 +75,11 @@ Lii lu am solo la ñuy liggéey ak Mozilla te marse bi
 
 
 ;is offering our service to the people who need it in the form that they need it.
-moodi jox sunu sarwiis yi nit ñi ko soxla ak ni ñu  ko soxla.
+moodi jox sunu sarwiis yi nit ñi ko soxla ak ni ñu ko soxla.
 
 
 ;We are aware that Mozilla does also have quite a few users and its always been official
-Xam nañu ni Mozilla 
+Xam nañu ni Mozilla
 
 
 ;to get your brand and get your name out there in a marketplace with hundreds of millions of perspectives.
@@ -91,11 +91,11 @@ Bu ñu xasee ba jàng jukki bi du mët simili ñu nangu
 
 
 ;our web page and our mobile page, both of which had already included HTML5 technology,
-Sunu xëtu web ak bu mobil ñoom ñaar ñepp am nañu teknolosi HTML5,
+sunu xëtu web ak bu mobil ñoom ñaar ñepp am nañu teknolosi HTML5,
 
 
 ;and create an installer for the Mozilla App Store.
-ak nga sos sapukkaay ci butigu Mozilla
+ak nga sos sapukkaay ci butigu Mozilla.
 
 
 ;distribute your apps
