--- a/wo/videos/video_evernote.lang
+++ b/wo/videos/video_evernote.lang
@@ -19,7 +19,7 @@ su fekkeeni ay xëtu web la walla karmat walla mbir yoo soxla.
 
 
 ;Pictures, audio clips; anything you want
-foto, kilp ak loo bëgg
+Foto, kilip ak loo bëgg
 
 
 ;Evernote is basically everywhere that you need it to be.
@@ -47,7 +47,7 @@ japp xët yi muy gis te di la ko fatali
 
 
 ;even when they are offline and they don’t have access to the Internet.
-ndare da nga nekkul ci rëdd nte mënuloo jot ci internet
+ndare da nga nekkul ci rëdd te mënuloo jot ci internet.
 
 
 ;Using modern web technologies lets us give the best and richest experience we can for our users.
@@ -75,7 +75,7 @@ Evernote’s dafa lay may ngay fattaliku
 
 
 ;and a big part of that is to help you remember things when you’re browsing around the web.
-te li ci ëpp mooy dafa may nga fattaliku ay mbir boo dee joow ci web bi
+te li ci ëpp mooy dafa may nga fattaliku ay mbir boo dee joow ci web bi.
 
 
 ;You’re trying to find some information.
