--- a/wo/videos/video_fx13.lang
+++ b/wo/videos/video_fx13.lang
@@ -23,7 +23,7 @@ Boo bëggee tambali jëfandikoo xëtu koñ bu bees, sosal koñ bu bees boo cuqee
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
- Xëtu koñ bu bees dina wone leegi wiñeti dal yi nga mujj gane.
+Xëtu koñ bu bees dina wone leegi wiñeti dal yi nga mujj gane.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
@@ -35,7 +35,7 @@ Cuqal ci pinees bi ngir xomb dal bi ci fi mu ne, walla butoŋ 'X' boo bëggee ne
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-Mën nga cuq itam ci njunju «caax» te ne ci kaw ci ndeyjooru xët wi boo bëggee dellusi ci xëtu koñ bu bees bu dara nekkul.
+Mën nga cuq itam ci njunju 'taf' te ne ci kaw ci ndeyjooru xët wi boo bëggee dellusi ci xëtu koñ bu bees bu dara nekkul.
 
 
 ;Get the latest Firefox now and start using these new features today!
