--- a/wo/videos/video_teambox.lang
+++ b/wo/videos/video_teambox.lang
@@ -11,92 +11,92 @@ dafay may ekip yi yu ne di jappalante,
 
 
 ;communicate with each other, share files and manage tasks.
-communicate with each other, share files and manage tasks.
+jokkoo ak ñépp, bokk ay dencukaay ak saytu li ñu wara def.
 
 
 ;We’re fortunate enough to have customers all over the world
-We’re fortunate enough to have customers all over the world
+Am nañu sãs am ay kilyaŋ fépp ci addina si
 
 
 ;and using HTML5 we know that we can deliver a consistent user experience
-and using HTML5 we know that we can deliver a consistent user experience
+te di jëfandikoo HTML5, xam nañu ni mën nañu jox jëfandikookat yi jëfgis bu dëgër
 
 
 ;to those customers anywhere they are, no matter what device they are using.
-to those customers anywhere they are, no matter what device they are using.
+sñu ay kiliyaŋ fépp fu ñu ne, ak aparey bu yu mën a ame.
 
 
 ;There is actually one customer that’s coming to mind called iBolt
-There is actually one customer that’s coming to mind called iBolt
+Am na kiliyaŋ bu ñëw sama xel tye tudd iBolt
 
 
 ;and they manufacture wireless accessories all over the world.
-and they manufacture wireless accessories all over the world.
+te dañuy defar ay liggeukaay yu amul fiil ci addina sépp.
 
 
 ;All of them are on different devices, some of them are using phones
-All of them are on different devices, some of them are using phones
+Ñoom ñepp ci apparey yu wuute lañu ne, am na yu ciy jëfanikoo telefon
 
 
 ;some are on tablets, some are on the desktop,
-some are on tablets, some are on the desktop,
+yenn yi ci tabalet, yenn yi ci ordinatëëru biro,
 
 
 ;but we know that all of them have a consistent and great user experience using HTML5
-but we know that all of them have a consistent and great user experience using HTML5
+wante xam nañu ni ñoom ñépp am nañu jëfgis bu takku ci jëfandikoo HTML5
 
 
 ;and that gives us a lot of assurance as a software developer.
-and that gives us a lot of assurance as a software developer.
+loolu dafay tax ñu woolu sunu bopp ci li ñu nekk defarkatu xeltéef.
 
 
 ;Obviously we could build native applications, but doing so,
-Obviously we could build native applications, but doing so,
+Leer na ni mën nañu defar ay xeltéefi juddu, wante,
 
 
 ;for a small fast-growing company like us,
-for a small fast-growing company like us,
+pur antarpëriis bu tuuti ne ñun,
 
 
 ;takes a lot of time, a lot of extra money and
-takes a lot of time, a lot of extra money and
+dafay jël diir bu bari ak xaalis bu bari
 
 
 ;it impacts our ability to deliver a great app to market sooner.
-it impacts our ability to deliver a great app to market sooner.
+te dafay dal ci suñu mën mën di defar xeltéef yu neexul jaay.
 
 
 ;So we made the decision not to build native apps
-So we made the decision not to build native apps
+Loou mootax ñu baña defar ay fëfekaay juddu
 
 
 ;and we’re using technologies like HTML5 to get to market faster
-and we’re using technologies like HTML5 to get to market faster
+te dañuy jëfandikoo teknolosi yu melni HTML5 ngir gaawa jot ci marse bi
 
 
 ;with better products and ultimately to deliver a better user experience for our customers.
-with better products and ultimately to deliver a better user experience for our customers.
+meññeef yu baax te jox jëfgisu jëfandikookat bu g¨na baax ci sunu kilyaŋ yi.
 
 
 ;Quite frankly we see it as a terrific onramp for our business
-Quite frankly we see it as a terrific onramp for our business
+Ci dëgg dëgg ab ñall dugg bu rëy pur sunu antarpëriis
 
 
 ;Already today we see almost 1,000 signups a day without the Mozilla Marketplace
-Already today we see almost 1,000 signups a day without the Mozilla Marketplace
+Leegi ñi ngiy gis 1000 bindu bes bu ne, te du ci marse Mozilla
 
 
 ;and we can’t even imagine how many we can possibly get through that Marketplace.
-and we can’t even imagine how many we can possibly get through that Marketplace.
+te mënu ñu xayma sax ñaata la ñu mëna jot ci biir marse boobu.
 
 
 ;So we see it as a tremendous opportunity.
-So we see it as a tremendous opportunity.
+Leegi mën na nekk lu baax.
 
 
 ;Something that gives us more visibility, more cachet in the market
-Something that gives us more visibility, more cachet in the market
+Luy tax ñu gën ñu gis, ñu gëna am gëdda ci marse bi
 
 
 ;and we’re really excited about it, we’re looking forward to it.
-and we’re really excited about it, we’re looking forward to it.
+and we’re really excited about it, we’re looking forward to it. {ok}
