--- a/wo/marketplace/partners.lang
+++ b/wo/marketplace/partners.lang
@@ -15,7 +15,7 @@ Mozilla dafay indi gis gis yi ko lal - ubbeeku, li jëfandikookat bi tann, moom 
 
 
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
-Wideyoo bi dafa laaj joowkat bu ko mëna ubbi walla  <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
+Wideyoo bi dafa laaj joowkat bu ko mëna ubbi walla <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
 
 
 ;Learn all about creating HTML5 apps at the Mozilla Developer Network »
@@ -35,7 +35,7 @@ Jëfekaayu defar ci Web bi dafay may defarkat yi ñu am kontorol ci këmb yépp,
 
 
 ;Submit your app »
-Joxeel sa jëfekaay  »
+Joxeel sa jëfekaay »
 
 
 ;Launch your app on the Web
@@ -47,7 +47,7 @@ Dakkal jëfandikookat yi xam ak sa jëfekaay.
 
 
 ;Before the public launch later this year, Mozilla will be opening the Marketplace for user testing. Take advantage of this by being one of the first app developers to build a user base. Submit your app to:
-Laata ñu géenne at mii, Mozilla dina ubbi marse ngir jëfandikookat yiy teste. Fexeleen nekk jëfandikookat yi jëkk taxawal mbootaayu jëfandikookat. Joxal sa jëfekaay: 
+Laata ñu géenne at mii, Mozilla dina ubbi marse ngir jëfandikookat yiy teste. Fexeleen nekk jëfandikookat yi jëkk taxawal mbootaayu jëfandikookat. Joxal sa jëfekaay:
 
 
 ;Mozilla Marketplace — <em>Opening Soon</em>
@@ -59,4 +59,4 @@ Using open Web standards and Mozilla-designed APIs, great app experiences can be
 
 
 ;Test your app with a committed group of early adopters.
-Testeel sa jëfekaay ak nit ñu dogu 
+Testeel sa jëfekaay ak nit ñu dogu.
